# MegaStation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  convert.cc  generate_data.py  main.cc  out1  out2  out_dl_0  out_fft_gpu_0  out_fft_gpu_1  out_fft_gpu_1_1  out_fft_gpu_2  out_fft_gpu_3
benchmark/: CMakeLists.txt  arti_kernel.cu  mega_fragment.cc  mega_latency.cc  mega_reliable.cc  mega_throughput.cc
cuPHY/: .clang-format  CMakeLists.release.txt  CMakeLists.txt
cuPHY/build2/: compile_commands.json
cuPHY/docs/: Doxyfile.in
cuPHY/examples/: CMakeLists.release.txt  CMakeLists.txt
cuPHY/examples/ReedMuller_decoder/: CMakeLists.txt  cuphy_ex_ReedMuller_decoder.cpp
cuPHY/examples/bfc/: CMakeLists.txt  dummy.cu
cuPHY/examples/cfo_ta_est/: CMakeLists.txt  cuphy_ex_cfo_ta_est.cpp
cuPHY/examples/ch_est/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_ch_est.cpp
cuPHY/examples/channel_eq/: CMakeLists.txt  cuphy_ex_channel_eq.cpp
cuPHY/examples/channel_estimation/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_channel_est.cpp
cuPHY/examples/common/: cuphy.hpp  cuphy_hdf5.hpp  datasets.cpp  datasets.hpp  hdf5hpp.hpp  mpsTst.py  test_config.hpp
cuPHY/examples/comp_cwTreeTypes/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_comp_cwTreeTypes.cpp
cuPHY/examples/csi_rs/: CMakeLists.release.txt  CMakeLists.txt  nzp_csi_rs_test.cpp
cuPHY/examples/csirs_tx_multi_cell/: CMakeLists.txt  cuphy_ex_nzp_csirs_tx_multi_cell.cpp  dummy.cu
cuPHY/examples/cuphy_pti_example/: CMakeLists.txt  cuphy_pti_example.cu
cuPHY/examples/dl_rate_matching/: CMakeLists.release.txt  CMakeLists.txt  dl_rate_matching.cpp  dummy.cu
cuPHY/examples/error_correction/: CMakeLists.txt  ldpc_decode_test_vec.cpp  ldpc_decode_test_vec_file.cpp  ldpc_decode_test_vec_file.hpp  ldpc_decode_test_vec_gen.cpp  ldpc_decode_test_vec_pybind.hpp
cuPHY/examples/fading_chan/: CMakeLists.txt  fading_chan.cu  fading_chan.cuh  fading_chan_ex.cpp
cuPHY/examples/gen_pucch_perf_curve/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_gen_perf_curve_from_file.cpp  gen_pucch_perf_curve.cpp  gen_pucch_perf_curve.hpp
cuPHY/examples/gen_pusch_bler_curve/: CMakeLists.txt  cuphy_ex_gen_bler_curve_from_file.cpp  gen_pusch_bler_curve.cpp  gen_pusch_bler_curve.hpp
cuPHY/examples/graphs/: CMakeLists.txt  graphs.cu
cuPHY/examples/ldpc_encode/: CMakeLists.release.txt  CMakeLists.txt  ldpc_encode.cpp
cuPHY/examples/modulation_mapper/: CMakeLists.release.txt  CMakeLists.txt  modulation_mapper.cpp
cuPHY/examples/pdcch/: CMakeLists.release.txt  CMakeLists.txt  embed_pdcch_tf_signal.cpp
cuPHY/examples/pdcch_tx_multi_cell/: CMakeLists.txt  cuphy_ex_pdcch_tx_multi_cell.cpp
cuPHY/examples/pdsch_dmrs/: CMakeLists.release.txt  CMakeLists.txt  pdsch_dmrs.cpp
cuPHY/examples/pdsch_tx/: CMakeLists.release.txt  CMakeLists.txt
cuPHY/examples/pdsch_tx_graphs/: CMakeLists.txt  cuphy_ex_pdsch_tx_graphs.cpp
cuPHY/examples/pdsch_tx_multi_cell/: CMakeLists.txt  cuphy_ex_pdsch_tx_multi_cell.cpp
cuPHY/examples/polar_decoder/: CMakeLists.txt  cuphy_ex_polar_decoder.cpp
cuPHY/examples/polar_encoder/: CMakeLists.release.txt  CMakeLists.txt
cuPHY/examples/polar_seg_deRm_deItl/: CMakeLists.txt  cuphy_ex_polar_seg_deRm_deItl.cpp
cuPHY/examples/prach_receiver_multi_cell/: CMakeLists.txt
cuPHY/examples/prach_test/: CMakeLists.txt
cuPHY/examples/psch_rx_tx/: CMakeLists.txt  cuphy_ex_psch_rx_tx.cpp  psch_rx_tx_cmn.cpp  psch_rx_tx_cmn.hpp
cuPHY/examples/pucch_F0_receiver/: CMakeLists.txt  cuphy_ex_pucch_F0_receiver.cpp
cuPHY/examples/pucch_F1_receiver/: CMakeLists.txt  cuphy_ex_pucch_F1_receiver.cpp
cuPHY/examples/pucch_F234_uci_seg/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_pucch_F234_uciSeg.cpp
cuPHY/examples/pucch_F2_front_end/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_pucch_F2_front_end.cpp
cuPHY/examples/pucch_F3_front_end/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_pucch_F3_front_end.cpp
cuPHY/examples/pucch_F3_segLLRs/: CMakeLists.txt  cuphy_ex_pucch_F3_segLLRs.cpp
cuPHY/examples/pucch_receiver/: CMakeLists.release.txt  CMakeLists.txt  pucch_receiver.cpp
cuPHY/examples/pucch_rx_pipeline/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_pucch_rx_pipeline.cpp
cuPHY/examples/pusch_crc/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_pusch_crc.cpp
cuPHY/examples/pusch_rateMatch/: CMakeLists.txt  cuphy_ex_pusch_rateMatch.cpp  dummy.cu
cuPHY/examples/pusch_rx_multi_pipe/: CMakeLists.release.txt  CMakeLists.txt  pusch_rx_test.hpp
cuPHY/examples/simplex_decoder/: CMakeLists.txt  cuphy_ex_simplex_decoder.cpp
cuPHY/examples/srs_chEst0/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_srs_chEst0.cpp
cuPHY/examples/srs_ch_est/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_srs_ch_est.cpp
cuPHY/examples/srs_rx_pipeline/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_srs_rx_pipeline.cpp
cuPHY/examples/ss/: CMakeLists.txt
cuPHY/examples/ssb_tx_multi_cell/: CMakeLists.txt  cuphy_ex_ssb_tx_multi_cell.cpp  dummy.cu
cuPHY/examples/sym_demod/: CMakeLists.release.txt  CMakeLists.txt  cuphy_ex_sym_demod.cpp
cuPHY/examples/test_example/: CMakeLists.release.txt  CMakeLists.txt  main.cpp
cuPHY/examples/uciOnPusch_csi2_ctrl/: CMakeLists.txt  (+1 more)
cuPHY/nvlog/: CMakeLists.txt
cuPHY/src/: CMakeLists.txt
cuPHY/test/: CMakeLists.txt  cuphy_unit_test.sh  perf_func.sh  test_summary.py
cuPHY/util/: ptxas_lcheck.py  pusch_perf_collect.py
matlab/: main.c  (+1 more)
src/operators/: CMakeLists.txt  mega_complex.h  mmlt.cuh  utils.h
src/scheduler/: CMakeLists.txt  atomic_table.h  bulk_enqueue.h  cpu_buffer.cc  cpu_buffer.h  defs.h  exec_status.cc  exec_status.h  frame_manager.h  gdr_utils.cc  gdr_utils.h  gpu_engine.cc  gpu_engine.h  inst_table.h  mem_manager.cc  mem_manager.h  notif_table.h  scheduler.cc  scheduler.h  spin_lock.h  task_manager.h
test/latency/: CMakeLists.txt  arti_kernel.h  latency_breakdown.cc  latency_cdf.cc  latency_delay.cc  latency_fragment.cc  latency_partial.cc  test_latency.py
test/matrix/: CMakeLists.txt  test_cuphy_tensor.cc  test_matrix.cc
(+1387 files in other folders)
